--- a/index.html
+++ b/index.html
@@ -1,35 +1,57 @@
 <!DOCTYPE html>
 <html class="dark">
-	<head>
+	<head>
+
 		<!-- Basic -->
 		<meta charset="utf-8">
-		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
-		<title>Demo Band | Porto - Responsive HTML5 Template</title>	
+		<meta http-equiv="X-UA-Compatible" content="IE=edge">	
+
+		<title>Cardenales</title>	
+
 		<meta name="keywords" content="HTML5 Template" />
 		<meta name="description" content="Porto - Responsive HTML5 Template">
-		<meta name="author" content="okler.net">
+		<meta name="author" content="okler.net">
+
 		<!-- Favicon -->
 		<link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon" />
-		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+		<link rel="apple-touch-icon" href="img/apple-touch-icon.png">
+
 		<!-- Mobile Metas -->
-		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
-		<!-- Web Fonts  -->		<link id="googleFonts" href="https://fonts.googleapis.com/css?family=Poppins:400,600%7CJosefin+Sans:400,700%7CMontserrat:400,700&display=swap" rel="stylesheet" type="text/css">
-		<!-- Vendor CSS -->		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">		<link rel="stylesheet" href="vendor/animate/animate.compat.css">		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
+		<meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1.0, shrink-to-fit=no">
+
+		<!-- Web Fonts  -->
+		<link id="googleFonts" href="https://fonts.googleapis.com/css?family=Poppins:400,600%7CJosefin+Sans:400,700%7CMontserrat:400,700&display=swap" rel="stylesheet" type="text/css">
+
+		<!-- Vendor CSS -->
+		<link rel="stylesheet" href="vendor/bootstrap/css/bootstrap.min.css">
+		<link rel="stylesheet" href="vendor/fontawesome-free/css/all.min.css">
+		<link rel="stylesheet" href="vendor/animate/animate.compat.css">
+		<link rel="stylesheet" href="vendor/simple-line-icons/css/simple-line-icons.min.css">
+		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.carousel.min.css">
+		<link rel="stylesheet" href="vendor/owl.carousel/assets/owl.theme.default.min.css">
+		<link rel="stylesheet" href="vendor/magnific-popup/magnific-popup.min.css">
+
 		<!-- Theme CSS -->
 		<link rel="stylesheet" href="css/theme.css">
 		<link rel="stylesheet" href="css/theme-elements.css">
 		<link rel="stylesheet" href="css/theme-blog.css">
 		<link rel="stylesheet" href="css/theme-shop.css">
 
-		<!-- Demo CSS -->		<link rel="stylesheet" href="css/demos/demo-band.css">
-		<!-- Skin CSS -->		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-band.css">
+		<!-- Demo CSS -->
+		<link rel="stylesheet" href="css/demos/demo-band.css">
+
+		<!-- Skin CSS -->
+		<link id="skinCSS" rel="stylesheet" href="css/skins/skin-band.css">
+
 		<!-- Theme Custom CSS -->
-		<link rel="stylesheet" href="css/custom.css">
+		<link rel="stylesheet" href="css/custom.css">
+
 		<!-- Head Libs -->
 		<script src="vendor/modernizr/modernizr.min.js"></script>
 
 	</head>
-	<body data-plugin-scroll-spy data-plugin-options="{'target': '#header'}">
+	<body data-plugin-scroll-spy data-plugin-options="{'target': '#header'}">
+
 		<div class="body">
 			<header id="header" class="header-transparent header-effect-shrink header-no-border-bottom" data-plugin-options="{'stickyEnabled': true, 'stickyEffect': 'shrink', 'stickyEnableOnBoxed': true, 'stickyEnableOnMobile': false, 'stickyChangeLogo': true, 'stickyStartAt': 30, 'stickyHeaderContainerHeight': 70}">
 				<div class="header-body border-0 box-shadow-none bg-dark">
@@ -82,8 +104,10 @@
 						</div>
 					</div>
 				</div>
-			</header>
-			<div role="main" class="main">
+			</header>
+
+			<div role="main" class="main">
+
 				<section id="home" class="section border-0 bg-dark overlay overlay-show overlay-op-8 overflow-hidden m-0" style="height: 100vh;">
 					<div class="background-image-wrapper position-absolute top-0 left-0 right-0 bottom-0 animated kenBurnsToLeft" style="background-image: url(img/demos/band/slides/slide-1.jpg); background-size: cover; background-position: center; animation-duration: 20s;"></div>
 					<div class="container position-relative z-index-3 h-100">
@@ -92,17 +116,21 @@
 								<h1>
 									<span class="d-none">Porto HTML5 Template - Demo Band</span>
 									<svg class="custom-porto-svg-logo" viewBox="0 0 292 80" x="0px" y="0px" width="292px" height="85px">
-										<path d="M 48.3077 7.3505 C 43.4299 3.1552 36.1469 1.052 26.4362 1.052 L -0.1678 1.052 L -0.1678 77.6639 L 20.5403 77.6639 L 20.5403 51.888 L 26.3914 51.888 C 35.7218 51.888 42.9265 49.5722 48.0057 44.9405 C 53.0736 40.309 55.6132 33.753 55.6132 25.2505 C 55.6132 17.52 53.1743 11.5571 48.3077 7.3505 L 48.3077 7.3505 ZM 20.5403 17.52 L 25.9439 17.52 C 31.739 17.52 34.6366 20.0483 34.6366 25.0939 C 34.6366 28.0922 33.7081 30.4527 31.8509 32.1532 C 29.9938 33.8538 27.499 34.704 24.3553 34.704 L 20.5403 34.704 L 20.5403 17.52 L 20.5403 17.52 Z" stroke="#ffffff" stroke-width="1" fill="#ffffff"/>
+										<text x="10" y="60" font-family="Arial, sans-serif" font-size="48" fill="#ffffff">
+											Cardenales
+										  </text>
+										<!-- <path d="M 48.3077 7.3505 C 43.4299 3.1552 36.1469 1.052 26.4362 1.052 L -0.1678 1.052 L -0.1678 77.6639 L 20.5403 77.6639 L 20.5403 51.888 L 26.3914 51.888 C 35.7218 51.888 42.9265 49.5722 48.0057 44.9405 C 53.0736 40.309 55.6132 33.753 55.6132 25.2505 C 55.6132 17.52 53.1743 11.5571 48.3077 7.3505 L 48.3077 7.3505 ZM 20.5403 17.52 L 25.9439 17.52 C 31.739 17.52 34.6366 20.0483 34.6366 25.0939 C 34.6366 28.0922 33.7081 30.4527 31.8509 32.1532 C 29.9938 33.8538 27.499 34.704 24.3553 34.704 L 20.5403 34.704 L 20.5403 17.52 L 20.5403 17.52 Z" stroke="#ffffff" stroke-width="1" fill="#ffffff"/>
 										<path d="M 118.7302 5.7597 C 112.7719 1.6666 104.9938 -0.38 95.3959 -0.38 C 83.1791 -0.38 73.8712 2.9874 67.4719 9.6999 C 61.0615 16.4124 57.8618 26.1344 57.8618 38.8657 C 57.8618 51.7426 61.0726 61.5428 67.5166 68.2777 C 73.9607 75.0126 83.2128 78.38 95.2953 78.38 C 104.9252 78.38 112.7404 76.3068 118.7302 72.1598 L 118.7302 5.7597 ZM 95.3959 16.804 C 100.5421 16.804 104.4242 18.6276 107.0197 22.2523 C 109.6152 25.8771 110.913 31.4932 110.913 39.1007 C 110.913 46.6859 109.6264 52.2572 107.0757 55.8372 C 104.5137 59.4172 100.5869 61.196 95.2953 61.196 C 84.8796 61.196 79.6774 53.8346 79.6774 39.1007 C 79.6774 24.2437 84.9131 16.804 95.3959 16.804 Z" stroke="#ffffff" stroke-width="1" fill="#ffffff"/>
 										<path d="M 149.3979 49.74 L 165.8884 77.6639 L 189.3821 77.6639 L 166.9735 44.247 C 175.6438 39.3915 179.9846 32.5336 179.9846 23.6731 C 179.9846 8.5924 169.5131 1.052 148.5925 1.052 L 123.3646 1.052 L 123.3646 77.6639 L 144.0728 77.6639 L 144.0728 49.74 L 149.3979 49.74 L 149.3979 49.74 ZM 144.0728 16.804 L 148.2344 16.804 C 155.4392 16.804 159.0527 19.3995 159.0527 24.5681 C 159.0527 30.8555 155.3721 33.988 148.0219 33.988 L 144.0728 33.988 L 144.0728 16.804 L 144.0728 16.804 Z" stroke="#ffffff" stroke-width="1" fill="#ffffff"/>
 										<path d="M 212.3724 18.236 L 237.7653 16.625 L 227.6321 1.052 L 177.8002 1.052 L 186.7502 18.236 L 191.6643 18.236 L 191.6643 77.6639 L 212.3724 77.6639 L 212.3724 18.236 Z" stroke="#ffffff" stroke-width="1" fill="#ffffff"/>
-										<path d="M 253.6318 16.804 C 258.7781 16.804 262.6603 18.6276 265.2556 22.2523 C 267.8513 25.8771 269.1489 31.4932 269.1489 39.1007 C 269.1489 46.6859 267.8624 52.2572 265.3115 55.8372 C 262.7496 59.4172 258.8229 61.196 253.5313 61.196 C 243.1157 61.196 237.9136 53.8346 237.9136 39.1007 C 237.9136 36.0745 238.1273 24.4059 238.5618 21.995 L 216.5537 23.785 C 216.2476 26.2813 216.0979 36.0817 216.0979 38.8657 C 216.0979 51.7426 219.3087 61.5428 225.7527 68.2777 C 232.1965 75.0126 241.4487 78.38 253.5313 78.38 C 265.7703 78.38 275.0784 75.0349 281.4327 68.3336 C 287.7874 61.6436 290.9646 51.8545 290.9646 38.9776 C 290.9646 26.0673 287.7985 16.2894 281.4888 9.6216 C 275.1677 2.9539 265.8821 -0.38 253.6318 -0.38 C 252.1803 -0.38 234.6597 -0.3318 233.2903 -0.2368 L 245.8203 17.2693 C 247.1204 16.9562 252.1108 16.804 253.6318 16.804 Z" stroke="#ffffff" stroke-width="1" fill="#ffffff"/>
+										<path d="M 253.6318 16.804 C 258.7781 16.804 262.6603 18.6276 265.2556 22.2523 C 267.8513 25.8771 269.1489 31.4932 269.1489 39.1007 C 269.1489 46.6859 267.8624 52.2572 265.3115 55.8372 C 262.7496 59.4172 258.8229 61.196 253.5313 61.196 C 243.1157 61.196 237.9136 53.8346 237.9136 39.1007 C 237.9136 36.0745 238.1273 24.4059 238.5618 21.995 L 216.5537 23.785 C 216.2476 26.2813 216.0979 36.0817 216.0979 38.8657 C 216.0979 51.7426 219.3087 61.5428 225.7527 68.2777 C 232.1965 75.0126 241.4487 78.38 253.5313 78.38 C 265.7703 78.38 275.0784 75.0349 281.4327 68.3336 C 287.7874 61.6436 290.9646 51.8545 290.9646 38.9776 C 290.9646 26.0673 287.7985 16.2894 281.4888 9.6216 C 275.1677 2.9539 265.8821 -0.38 253.6318 -0.38 C 252.1803 -0.38 234.6597 -0.3318 233.2903 -0.2368 L 245.8203 17.2693 C 247.1204 16.9562 252.1108 16.804 253.6318 16.804 Z" stroke="#ffffff" stroke-width="1" fill="#ffffff"/> -->
 									</svg>
 								</h1>
 							</div>
 						</div>
 					</div>
-				</section>
+				</section>
+
 				<section class="section bg-secondary border-0 py-0 m-0">
 					<div class="container container-xl-custom">
 						<div class="row custom-borders-divider-style-1">
@@ -120,7 +148,8 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section>
+
 				<div id="tour" class="container container-xl-custom py-5 my-5">
 					<div class="row mb-4 pb-2">
 						<div class="col text-center">
@@ -343,7 +372,8 @@
 								</div>
 							</div>
 						</div>
-					</div>
+					</div>
+
 					<div class="row align-items-center pt-2 my-5">
 						<div class="col-lg-3">
 							<h4 class="text-5 ls-0 mb-0">SUBSCRIBE FOR UPDATED</h4>
@@ -364,7 +394,8 @@
 							</form>
 						</div>
 					</div>
-				</div>
+				</div>
+
 				<section id="about" class="section section-height-4 border-0 m-0">
 					<div class="container container-xl-custom">
 						<div class="row">
@@ -388,7 +419,8 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section>
+
 				<div class="container-fluid">
 					<div class="row">
 						<div class="col-sm-6 col-lg-3 px-0">
@@ -460,7 +492,8 @@
 							</div>
 						</div>
 					</div>
-				</div>
+				</div>
+
 				<section class="section border-0 m-0 overlay overlay-show overlay-op-9 appear-animation" data-appear-animation="fadeIn" style="background: url(img/demos/band/backgrounds/background-1.jpg); background-size: cover; background-position: center;">
 					<div class="container container-xl-custom">
 						<div class="row align-items-center my-5 py-5">
@@ -471,7 +504,8 @@
 							</div>
 						</div>
 					</div>
-				</section>
+				</section>
+
 				<div id="news" class="container container-xl-custom py-5 my-5">
 					<div class="row mb-5">
 						<div class="col text-center">
@@ -541,8 +575,10 @@
 							<a href="demo-band-blog.html" class="btn btn-primary btn-rounded font-weight-semibold btn-px-5 py-3 appear-animation" data-appear-animation="fadeIn" data-appear-animation-delay="300"><span class="position-relative top-1">VIEW MORE</span></a>
 						</div>
 					</div>
-				</div>
-			</div> 
+				</div>
+
+			</div> 
+
 			<footer id="footer" class="bg-secondary border-0 mt-0">
 				<div class="container-fluid py-4 px-5">
 					<div class="row justify-content-center justify-content-md-between align-items-center py-5">
@@ -586,11 +622,13 @@
 									<form class="contact-form form-style-4 form-errors-light appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="900" action="php/contact-form.php" method="POST">
 										<div class="contact-form-success alert alert-success d-none mt-4">
 											<strong>Success!</strong> Your message has been sent to us.
-										</div>
+										</div>
+
 										<div class="contact-form-error alert alert-danger d-none mt-4">
 											<strong>Error!</strong> There was an error sending your message.
 											<span class="mail-error-message text-1 d-block"></span>
-										</div>
+										</div>
+
 										<div class="row">
 											<div class="form-group col-md-4">
 												<input type="text" value="" data-msg-required="Please enter your name." maxlength="100" class="form-control" name="name" placeholder="Name" required>
@@ -634,19 +672,38 @@
 						</div>
 					</div>
 				</div>
-			</footer>
+			</footer>
+
 		</div>
 
-		<!-- Vendor -->		<script src="vendor/jquery/jquery.min.js"></script>		<script src="vendor/jquery.appear/jquery.appear.min.js"></script>		<script src="vendor/jquery.easing/jquery.easing.min.js"></script>		<script src="vendor/jquery.cookie/jquery.cookie.min.js"></script>		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>		<script src="vendor/jquery.validation/jquery.validate.min.js"></script>		<script src="vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js"></script>		<script src="vendor/jquery.gmap/jquery.gmap.min.js"></script>		<script src="vendor/lazysizes/lazysizes.min.js"></script>		<script src="vendor/isotope/jquery.isotope.min.js"></script>		<script src="vendor/owl.carousel/owl.carousel.min.js"></script>		<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>		<script src="vendor/vide/jquery.vide.min.js"></script>		<script src="vendor/vivus/vivus.min.js"></script>
+		<!-- Vendor -->
+		<script src="vendor/jquery/jquery.min.js"></script>
+		<script src="vendor/jquery.appear/jquery.appear.min.js"></script>
+		<script src="vendor/jquery.easing/jquery.easing.min.js"></script>
+		<script src="vendor/jquery.cookie/jquery.cookie.min.js"></script>
+		<script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+		<script src="vendor/jquery.validation/jquery.validate.min.js"></script>
+		<script src="vendor/jquery.easy-pie-chart/jquery.easypiechart.min.js"></script>
+		<script src="vendor/jquery.gmap/jquery.gmap.min.js"></script>
+		<script src="vendor/lazysizes/lazysizes.min.js"></script>
+		<script src="vendor/isotope/jquery.isotope.min.js"></script>
+		<script src="vendor/owl.carousel/owl.carousel.min.js"></script>
+		<script src="vendor/magnific-popup/jquery.magnific-popup.min.js"></script>
+		<script src="vendor/vide/jquery.vide.min.js"></script>
+		<script src="vendor/vivus/vivus.min.js"></script>
+
 		<!-- Theme Base, Components and Settings -->
 		<script src="js/theme.js"></script>
 
 		<!-- Current Page Vendor and Views -->
-		<script src="js/views/view.contact.js"></script>
+		<script src="js/views/view.contact.js"></script>
+
 		<!-- Demo -->
 		<script src="js/demos/demo-band.js"></script>
 
-		<!-- Theme Custom -->		<script src="js/custom.js"></script>
+		<!-- Theme Custom -->
+		<script src="js/custom.js"></script>
+
 		<!-- Theme Initialization Files -->
 		<script src="js/theme.init.js"></script>
 
