--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
 						<div class="row align-items-center justify-content-center h-100">
 							<div class="col-auto pt-5 mt-3">
 								<h1>
-									<span class="d-none">Porto HTML5 Template - Demo Band</span>
+									<span class="d-none">Cardenales</span>
 										<!-- <text x="10" y="60" font-family="Arial, sans-serif" font-size="48" fill="#ffffff">
 											Cardenales
 										  </text> -->
@@ -479,18 +479,19 @@
 									<line x1="5" x2="5" y1="0" y2="40" stroke="#909294" stroke-width="1" class="appear-animation" data-appear-animation="customSVGLineAnim"></line>
 								</svg>
 								<div class="overflow-hidden">
-									<span class="d-block text-color-light font-weight-bold d-block appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="300">ABOUT US</span>
+									<span class="d-block text-color-light font-weight-bold d-block appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="300">Nosotros</span>
 								</div>
 								<div class="overflow-hidden mb-3">
-									<h2 class="font-weight-bold text-9 pb-1 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="500">Band BIO</h2>
+									<h2 class="font-weight-bold text-9 pb-1 mb-0 appear-animation" data-appear-animation="maskUp" data-appear-animation-delay="500">Cardenales</h2>
 								</div>
 							</div>
 						</div>
 						<div class="row">
 							<div class="col">
-								<p class="font-weight-bold line-height-9 text-4 mb-4 pb-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras id ex ac metus interdum commodo. Mauris cursus finibus elit, ut venenatis augue pharetra id. Donec condimentum porta posuere. Suspendisse sed erat venenatis, lobortis magna at, vehicula mauris. </p>
-								<p class="line-height-9 mb-4 pb-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="850">Aenean elit ipsum, congue lacinia purus et, eleifend tempor lectus. Vivamus sed magna sed magna congue vehicula et ac mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti. Donec nec cursus orci, hendrerit tempor libero. Quisque scelerisque est eros, sit amet tempor dui scelerisque vitae. Sed placerat nibh vel tristique malesuada. </p>
-								<p class="line-height-9 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1000">Aenean elit ipsum, congue lacinia purus et, eleifend tempor lectus. Vivamus sed magna sed magna congue vehicula et ac mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti. Donec nec cursus orci, hendrerit tempor libero. Quisque scelerisque est eros, sit amet tempor dui scelerisque vitae. Sed placerat nibh vel tristique malesuada. Aenean elit ipsum, congue lacinia purus et, eleifend tempor lectus. Vivamus sed magna sed magna congue vehicula et ac mi. Lorem ipsum dolor sit amet, consectetur adipiscing elit. Suspendisse potenti. Donec nec cursus orci, hendrerit tempor libero. Quisque scelerisque est eros, sit amet tempor dui scelerisque vitae. Sed placerat nibh vel tristique malesuada. </p>
+								<p class="font-weight-bold line-height-9 text-4 mb-4 pb-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="700">Somos un equipo de fútbol americano femenil comprometido con demostrar que las mujeres podemos superar cualquier límite. En cada entrenamiento y partido, damos el 100%, dejando claro que la disciplina, el esfuerzo y el trabajo en equipo son la clave para alcanzar nuestras metas. </p>
+								<p class="line-height-9 mb-4 pb-2 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="850">Nuestra misión es fomentar y promocionar la práctica del fútbol americano femenil en Yucatán, no solo como un deporte, sino como un medio para fortalecer el bienestar físico y emocional de nuestras jugadoras. </p>
+								<p class="line-height-9 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1000">Con la visión de consolidarnos como el equipo más grande y representativo del Sureste, trabajamos cada día con pasión, representando con orgullo los colores de nuestro estado y motivando a más mujeres a unirse a este emocionante deporte. </p>
+								<p class="line-height-9 mb-0 appear-animation" data-appear-animation="fadeInUpShorter" data-appear-animation-delay="1150">Nos guiamos por valores que reflejan nuestra esencia: trabajo en equipo, lealtad, perseverancia, responsabilidad, respeto, compromiso, honestidad y empatía. Estos principios nos inspiran a crecer como deportistas y como personas, demostrando que juntas podemos alcanzar cualquier objetivo. </p>
 							</div>
 						</div>
 					</div>
@@ -573,7 +574,7 @@
 					<div class="container container-xl-custom">
 						<div class="row align-items-center my-5 py-5">
 							<div class="col text-center py-5 my-5">
-								<a class="text-decoration-none lightbox" href="https://vimeo.com/45830194" data-plugin-options="{'type':'iframe'}">
+								<a class="text-decoration-none lightbox" href="https://vimeo.com/1047949238" data-plugin-options="{'type':'iframe'}">
 									<img class="icon-animated" width="80" src="vendor/linea-icons/linea-music/icons/play-button.svg" alt="" data-icon data-plugin-options="{'color': '#FFF', 'animated': true, 'delay': 600, 'strokeBased': true}" />
 								</a>
 							</div>
